--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,7 +1,7 @@
 {
   "app": {
-    "bundleName": "com.example.myapplication",
-    "vendor": "example",
+    "bundleName": "com.witer.mytestApp",
+    "vendor": "",
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:app_icon",
